[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_tools"]

[project]
name = "py-shared-tools"
version = "1.3.0"
description = "Small, dependency-minimal HTTP/storage/config/vendor-connector/retry utilities shared across personal projects (RestAdapter, ObjectStorage, config env-ref resolution, ConfigLoader, atomic file writes, idempotent logging setup, tabular file I/O, VendorConnector/remote_exec, SentinelOne RSO mixin, script-export storage handoff, generic retry-with-backoff)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "certifi>=2024.7.4",
    "urllib3>=2.0",
]

[project.optional-dependencies]
storage = ["boto3>=1.34"]
yaml = ["pyyaml>=6.0"]
tabular = ["pandas>=2.0", "openpyxl>=3.1"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "moto[s3]>=5.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "ruff>=0.15.21",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
    "pandas-stubs>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.12"
files = ["src/shared_tools"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# boto3/botocore ship no py.typed marker or stubs of their own (boto3-stubs
# is a separate, heavyweight package this dependency-minimal package isn't
# taking on) — only relevant to shared_tools.storage, which is itself gated
# behind the `storage` extra.
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true
